--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"zizaco/entrust": "1.2.*@dev",
+		"zizaco/confide": "~4.0@dev",
+		"mews/captcha": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
@@ -32,5 +35,5 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "dev"
 }
