Revert "adding sentry"
This reverts commit 980ce5e081d80dbd31ed4d97a922a75d1c3cde01.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"cartalyst/sentry": "2.1.*",
+		"zizaco/confide": "~4.0@dev",
 		"mews/captcha": "dev-master"
 	},
 	"autoload": {
