--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"zizaco/confide": "~4.0@dev",
+		"rydurham/sentinel": "1.*",
 		"mews/captcha": "dev-master"
 	},
 	"autoload": {
