--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 		"laravel/framework": "4.2.*",
 		"rydurham/sentinel": "1.*",
 		"cviebrock/eloquent-sluggable": "2.*",
+		"hisorange/bbcoder": "dev-master",
 		"mews/captcha": "dev-master"
 	},
 	"autoload": {
